--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Hello, world!
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <title>Alex Haas</title>
+  </head>
+
+  <body>
+    <h1>Alex Haas</h1>
+  </body>
+</html>
