--- a/index.html
+++ b/index.html
@@ -7,5 +7,11 @@
 
   <body>
     <h1>Alex Haas</h1>
+
+    <p>Paragraph information</p>
+
+    <h2>Heading 2</h2>
+
+    <p>Paragraph information</p>
   </body>
 </html>
