--- a/index.html
+++ b/index.html
@@ -13,5 +13,13 @@
     <h2>Heading 2</h2>
 
     <p>Paragraph information</p>
+
+    <h2>Heading 2</h2>
+
+    <p>Paragraph information</p>
+
+    <h2>Heading 2</h2>
+
+    <p>Paragraph information</p>
   </body>
 </html>
