--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
   </head>
 
   <body>
-    <h1>Alex Haas</h1>
+    <h1>About Alex Haas</h1>
+
+    <p>Alex Haas is a Junior at the University of Miami.</p>
+
+    <h2>Heading 1</h2>
 
     <p>Paragraph information</p>
 
@@ -14,11 +18,7 @@
 
     <p>Paragraph information</p>
 
-    <h2>Heading 2</h2>
-
-    <p>Paragraph information</p>
-
-    <h2>Heading 2</h2>
+    <h2>Heading 3</h2>
 
     <p>Paragraph information</p>
   </body>
