--- a/index.html
+++ b/index.html
@@ -10,9 +10,14 @@
 
     <p>Alex Haas is a Junior at the University of Miami.</p>
 
-    <h2>Heading 1</h2>
+    <h2>Data Points Yay</h2>
 
-    <p>Paragraph information</p>
+    <table>
+      <caption>Data from 2020-2022</caption>
+      <tr>
+        <th> Year </th>
+        <th> Data </th>
+      </tr>
 
     <h2>Heading 2</h2>
 
