--- a/index.html
+++ b/index.html
@@ -17,6 +17,14 @@
       <tr>
         <th> Year </th>
         <th> Data </th>
+        <th> Yay</th>
+      </tr>
+
+      <tr>
+        <td>2020</td>
+        <td>number</td>
+        <td>number</td>
+
       </tr>
 
     <h2>Heading 2</h2>
