--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
     <p>Alex Haas is a Junior at the University of Miami.</p>
 
+
+
     <h2>Data Points Yay</h2>
 
     <table>
@@ -26,6 +28,7 @@
         <td>number</td>
 
       </tr>
+      </table>
 
     <h2>Heading 2</h2>
 
