--- a/index.html
+++ b/index.html
@@ -28,6 +28,20 @@
         <td>number</td>
 
       </tr>
+
+      <tr>
+        <td>2021</td>
+        <td>number</td>
+        <td>number</td>
+
+      </tr>
+
+      <tr>
+        <td>2022</td>
+        <td>number</td>
+        <td>number</td>
+
+      </tr>
       </table>
 
     <h2>Heading 2</h2>
