--- a/index.html
+++ b/index.html
@@ -46,6 +46,12 @@
 
     <h2>Heading 2</h2>
 
+    <ul>
+      <li>hi</li>
+      <li>hello</li>
+      <li>lists are cool</li>
+    </ul>
+
     <p>Paragraph information</p>
 
     <h2>Heading 3</h2>
