--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <tr>
         <td>2022</td>
         <td>number</td>
-        <td>number</td>
+        <td>numbers</td>
 
       </tr>
       </table>
