--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 
 
 
-    <h2>Data Points Yay</h2>
+    <h2>How Alex Gets To School</h2>
 
     <table>
-      <caption>Data from 2020-2022</caption>
+      <caption>Alex Doesn't Have A Car</caption>
       <tr>
         <th> Year </th>
         <th> Data </th>
