--- a/index.html
+++ b/index.html
@@ -17,29 +17,41 @@
     <table>
       <caption>Alex Doesn't Have A Car</caption>
       <tr>
-        <th> Year </th>
-        <th> Data </th>
-        <th> Yay</th>
+        <th> Day of Week </th>
+        <th> Goes to School </th>
+        <th> Goes Home</th>
       </tr>
 
       <tr>
-        <td>2020</td>
-        <td>number</td>
-        <td>number</td>
-
-      </tr>
-
-      <tr>
-        <td>2021</td>
+        <td>Monday</td>
         <td>number</td>
         <td>number</td>
 
       </tr>
 
       <tr>
-        <td>2022</td>
+        <td>Tuesday</td>
+        <td>number</td>
+        <td>number</td>
+
+      </tr>
+
+      <tr>
+        <td>Wednesday</td>
         <td>number</td>
         <td>numbers</td>
+
+      </tr>
+
+      <tr>
+        <td>Thursday</td>
+        <td>number</td>
+        <td>numbers</td>
+
+        <tr>
+          <td>Friday</td>
+          <td>number</td>
+          <td>numbers</td>
 
       </tr>
       </table>
