--- a/index.html
+++ b/index.html
@@ -24,34 +24,34 @@
 
       <tr>
         <td>Monday</td>
-        <td>number</td>
-        <td>number</td>
+        <td>Walks</td>
+        <td>Gets Driven</td>
 
       </tr>
 
       <tr>
         <td>Tuesday</td>
-        <td>number</td>
-        <td>number</td>
+        <td>Walks</td>
+        <td>Walks</td>
 
       </tr>
 
       <tr>
         <td>Wednesday</td>
-        <td>number</td>
-        <td>numbers</td>
+        <td>Walks</td>
+        <td>Walks</td>
 
       </tr>
 
       <tr>
         <td>Thursday</td>
-        <td>number</td>
-        <td>numbers</td>
+        <td>Walks</td>
+        <td>Walks</td>
 
         <tr>
           <td>Friday</td>
-          <td>number</td>
-          <td>numbers</td>
+          <td>No class!</td>
+
 
       </tr>
       </table>
