--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <h1>About Alex Haas</h1>
 
     <p>Alex Haas is a Junior at the University of Miami.</p>
+    <p>Paragraph information</p>
 
 
 
@@ -18,10 +19,8 @@
       <caption>Alex Doesn't Have A Car</caption>
       <tr>
         <th> Day of Week </th>
-
-        <th> Goes to School </th>
-        
-        <th> Goes Home</th>
+        <th> To School </th>
+        <th> From School</th>
       </tr>
 
       <tr>
@@ -61,14 +60,13 @@
     <h2>Alex's Favorite Hobbies</h2>
 
     <ul>
-      <li>hi</li>
-      <li>hello</li>
-      <li>lists are cool</li>
+      <li>Hanging out with friends</li>
+      <li>Sleeping</li>
+      <li>Photography</li>
     </ul>
 
-    <p>Paragraph information</p>
 
-    <h2>Heading 3</h2>
+    <h2>Why Alex is Amazing</h2>
 
     <p>Paragraph information</p>
   </body>
