--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
   </head>
 
   <body>
-    <h1>About Alex Haas</h1>
+    <h1>All About Alex Haas</h1>
 
     <p>Alex Haas is a Junior at the University of Miami.</p>
-    <p>Paragraph information</p>
+    <p>She is from the suburbs of Philadelphia, Pennsylvania</p>
+    <p>She is a Journalism major with minors in Biology and Art/Art History</p>
 
 
 
