--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <h1>All About Alex Haas</h1>
 
     <p>Alex Haas is a Junior at the University of Miami.</p>
-    <p>She is from the suburbs of Philadelphia, Pennsylvania</p>
-    <p>She is a Journalism major with minors in Biology and Art/Art History</p>
+    <p>She is from the suburbs of Philadelphia, Pennsylvania.</p>
+    <p>She is a Journalism major with minors in Biology and Art/Art History.</p>
 
 
 
