--- a/index.html
+++ b/index.html
@@ -14,45 +14,46 @@
 
 
 
-    <h2>How Alex Gets To School</h2>
+    <h2>Get to Know Alex</h2>
 
     <table>
-      <caption>Alex Doesn't Have A Car</caption>
+      <caption>Yes/No Questions</caption>
       <tr>
-        <th> Day of Week </th>
-        <th> To School </th>
-        <th> From School</th>
+        <th> Question </th>
+        <th> Yes </th>
+        <th> No</th>
       </tr>
 
       <tr>
         <td>Monday</td>
-        <td>Walks</td>
-        <td>Gets Driven</td>
+        <td>x</td>
+        <td></td>
 
       </tr>
 
       <tr>
         <td>Tuesday</td>
-        <td>Walks</td>
-        <td>Walks</td>
+        <td></td>
+        <td>x</td>
 
       </tr>
 
       <tr>
         <td>Wednesday</td>
-        <td>Walks</td>
-        <td>Walks</td>
+        <td></td>
+        <td></td>
 
       </tr>
 
       <tr>
         <td>Thursday</td>
-        <td>Walks</td>
-        <td>Walks</td>
+        <td></td>
+        <td></td>
 
         <tr>
           <td>Friday</td>
-          <td>No class!</td>
+          <td></td>
+          <td></td>
 
 
       </tr>
