--- a/index.html
+++ b/index.html
@@ -17,42 +17,42 @@
     <h2>Get to Know Alex</h2>
 
     <table>
-      <caption>Yes/No Questions</caption>
+      <caption>True/False Questions</caption>
       <tr>
         <th> Question </th>
-        <th> Yes </th>
-        <th> No</th>
+        <th> True </th>
+        <th> False</th>
       </tr>
 
       <tr>
-        <td>Monday</td>
+        <td>Alex Has a Dog</td>
         <td>x</td>
         <td></td>
 
       </tr>
 
       <tr>
-        <td>Tuesday</td>
+        <td>Alex is an Only Child</td>
         <td></td>
         <td>x</td>
 
       </tr>
 
       <tr>
-        <td>Wednesday</td>
+        <td>Alex is a Vegetarian</td>
         <td></td>
-        <td></td>
+        <td>x</td>
 
       </tr>
 
       <tr>
-        <td>Thursday</td>
-        <td></td>
+        <td>Alex Loves Shopping</td>
+        <td>x</td>
         <td></td>
 
         <tr>
-          <td>Friday</td>
-          <td></td>
+          <td>Alex Hates Seafood</td>
+          <td>x</td>
           <td></td>
 
 
