--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <table>
       <caption>True/False Questions</caption>
       <tr>
-        <th> Question </th>
-        <th>   True   </th>
-        <th>   False  </th>
+        <th>Question</th>
+        <th>True</th>
+        <th>False</th>
       </tr>
 
       <tr>
@@ -68,8 +68,8 @@
     </ul>
 
 
-    <h2>Why Alex is Amazing</h2>
+    <h2>Alex's Favorite...</h2>
+      <p> Alex's favority animal is a sea turtle</p>
 
-    <p>Paragraph information</p>
   </body>
 </html>
