--- a/index.html
+++ b/index.html
@@ -69,7 +69,10 @@
 
 
     <h2>Alex's Favorite...</h2>
-      <p> Alex's favority animal is a sea turtle</p>
+
+      <p> Alex's favorite animal is a sea turtle</p>
+      <p> Alex's favorite food is mac and cheese</p>
+      <p> Alex's favorite color is turquoise</p>
 
   </body>
 </html>
