--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
 
     <h2>Alex's Favorite...</h2>
 
-      <p> Alex's favorite animal is a sea turtle.</p>
-      <p> Alex's favorite food is mac and cheese.</p>
+      <p> Alex's favorite animal is a sea turtle. She also likes dogs, especially her pet mini Labradoodle.</p>
+      <p> Alex's favorite food is mac and cheese. She also like dino nuggets. Alex cannot cook very well.</p>
       <p> Alex's favorite color is turquoise.</p>
 
   </body>
