--- a/botswana.html
+++ b/botswana.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta chartset="utf-8"/>
+    <meta charset="utf-8" />
     <title>Botswana</title>
 </html>
