--- a/botswana.html
+++ b/botswana.html
@@ -3,4 +3,12 @@
   <head>
     <meta charset="utf-8" />
     <title>Botswana</title>
+  </head>
+
+  <body>
+
+
+    <header>
+      <h1>Botswana</h1>
+    </header>
 </html>
