--- a/botswana.html
+++ b/botswana.html
@@ -11,4 +11,12 @@
     <header>
       <h1>Botswana</h1>
     </header>
+
+    <h2>Geography</h2>
+
+    <h2> Natural Resources</h2>
+
+    <h2> Demographics</h2>
+
+  </body>
 </html>
