--- a/botswana.html
+++ b/botswana.html
@@ -14,9 +14,15 @@
 
     <h2>Geography</h2>
 
-    <h2> Natural Resources</h2>
+    <h3> Location</h3>
 
-    <h2> Demographics</h2>
+    <h2> Environment</h2>
+
+      <h3> Climate</h3>
+
+    <h2> People and Society</h2>
+
+      <h3> Population</h3>
 
   </body>
 </html>
