--- a/botswana.html
+++ b/botswana.html
@@ -14,15 +14,22 @@
 
     <h2>Geography</h2>
 
-    <h3> Location</h3>
+      <h3> Location</h3>
+      <h3> Terrain</h3>
+      <h3>Natural Resources</h3>
+
 
     <h2> Environment</h2>
 
       <h3> Climate</h3>
+      <h3> Current Issues</h3>
+      <h3> Land Usage</h3>
 
     <h2> People and Society</h2>
 
       <h3> Population</h3>
+      <h3> Ethnic Groups</h3>
+      <h3> Demographic Profile</h3>
 
   </body>
 </html>
