--- a/botswana.html
+++ b/botswana.html
@@ -12,11 +12,16 @@
       <h1>Botswana</h1>
     </header>
 
-    <h2>Geography</h2>
+    <main>
 
-      <h3> Location</h3>
-      <h3> Terrain</h3>
-      <h3>Natural Resources</h3>
+
+
+      <section>
+        <h2>Geography</h2>
+
+        <h3> Location</h3>
+        <h3> Terrain</h3>
+        <h3>Natural Resources</h3>
 
 
     <h2> Environment</h2>
