--- a/botswana.html
+++ b/botswana.html
@@ -22,6 +22,7 @@
         <h3> Location</h3>
         <h3> Terrain</h3>
         <h3>Natural Resources</h3>
+      </section>
 
 
     <h2> Environment</h2>
@@ -35,6 +36,6 @@
       <h3> Population</h3>
       <h3> Ethnic Groups</h3>
       <h3> Demographic Profile</h3>
-
+    </main>
   </body>
 </html>
