--- a/botswana.html
+++ b/botswana.html
@@ -14,7 +14,7 @@
 
     <main>
       <ul>
-        <li<a href="https://www.cia.gov/the-world-factbook/countries/botswana/">Botswana</a></li>
+        <li><a href="https://www.cia.gov/the-world-factbook/countries/botswana/">Botswana</a></li>
       </ul>
 
 
