--- a/botswana.html
+++ b/botswana.html
@@ -13,17 +13,17 @@
     </header>
 
     <main>
-      <ul>
-        <li><a href="https://www.cia.gov/the-world-factbook/countries/botswana/">World Factbook-Botswana</a></li>
-      </ul>
-
-
       <section>
         <h2>Geography</h2>
+          <h3> Location</h3>
+            <ul>
+              <li><a href="https://www.cia.gov/the-world-factbook/field/location"</a></li>
+            </ul>
 
-        <h3> Location</h3>
-        <h3> Terrain</h3>
-        <h3>Natural Resources</h3>
+
+
+          <h3> Terrain</h3>
+          <h3>Natural Resources</h3>
       </section>
 
 
