--- a/botswana.html
+++ b/botswana.html
@@ -17,14 +17,14 @@
         <h2>Geography</h2>
           <h3> Location</h3>
             <ul>
-              <li><a href="https://www.cia.gov/the-world-factbook/field/location"</a></li>
+              <li><a href="https://www.cia.gov/the-world-factbook/field/location">Location</a></li>
             </ul>
-      </section>
+
 
 
           <h3> Terrain</h3>
           <h3>Natural Resources</h3>
-
+    </section>
 
 
     <h2> Environment</h2>
