--- a/botswana.html
+++ b/botswana.html
@@ -16,8 +16,9 @@
       <section>
         <h2>Geography</h2>
           <h3> Location</h3>
+            <p>
             <ul>
-              <li><a href="https://www.cia.gov/the-world-factbook/field/location">Location</a></li>
+              <li><a href="https://www.cia.gov/the-world-factbook/countries/botswana/#geography">Location</a></li>
             </ul>
 
 
