--- a/botswana.html
+++ b/botswana.html
@@ -16,7 +16,7 @@
       <section>
         <h2>Geography</h2>
           <h3> Location</h3>
-            <p>
+            <p>Southern Africa, north of South Africa,/p>
             <ul>
               <li><a href="https://www.cia.gov/the-world-factbook/countries/botswana/#geography">Location</a></li>
             </ul>
