--- a/botswana.html
+++ b/botswana.html
@@ -17,9 +17,9 @@
         <h2>Geography</h2>
 
         <ul>
-          <li><a href="https://www.cia.gov/the-world-factbook/countries/botswana/#geography">Location</a></li>
+          <li><a href="https://www.cia.gov/the-world-factbook/countries/botswana/#geography">Geography of Botswana</a></li>
         </ul>
-        
+
           <h3> Location</h3>
             <p>Southern Africa, north of South Africa</p>
 
