--- a/botswana.html
+++ b/botswana.html
@@ -24,6 +24,9 @@
             <p>Southern Africa, north of South Africa</p>
 
           <h3> Terrain</h3>
+            <p> The terrain is predominantly flat to general rolling tableland. </P>
+            <p> The Kalahari Desert is in the southwest. </p>
+            
           <h3>Natural Resources</h3>
       </section>
 
