--- a/botswana.html
+++ b/botswana.html
@@ -26,8 +26,19 @@
           <h3> Terrain</h3>
             <p> The terrain is predominantly flat to general rolling tableland. </P>
             <p> The Kalahari Desert is in the southwest. </p>
-            
+
           <h3>Natural Resources</h3>
+            <p> natural resources include...</P>
+                <ul>
+                  <li>diamonds</li>
+                  <li>copper</li>
+                  <li>nickel</li>
+                  <li>salt</li>
+                  <li>soda ash</li>
+                  <li>potash</li>
+                  <li>coal</li>
+                  <li>iron ore</li>
+                  <li>silver</li>
       </section>
 
 
