--- a/botswana.html
+++ b/botswana.html
@@ -28,17 +28,17 @@
             <p> The Kalahari Desert is in the southwest. </p>
 
           <h3>Natural Resources</h3>
-            <p> natural resources include...</P>
+            <p> Natural resources include...</P>
                 <ul>
-                  <li>diamonds</li>
-                  <li>copper</li>
-                  <li>nickel</li>
-                  <li>salt</li>
-                  <li>soda ash</li>
-                  <li>potash</li>
-                  <li>coal</li>
-                  <li>iron ore</li>
-                  <li>silver</li>
+                  <li>Diamonds</li>
+                  <li>Copper</li>
+                  <li>Nickel</li>
+                  <li>Salt</li>
+                  <li>Soda ash</li>
+                  <li>Potash</li>
+                  <li>Coal</li>
+                  <li>Iron ore</li>
+                  <li>Silver</li>
       </section>
 
 
