--- a/botswana.html
+++ b/botswana.html
@@ -28,7 +28,7 @@
             <p> The Kalahari Desert is in the southwest. </p>
 
           <h3>Natural Resources</h3>
-            <p> Natural resources include...</P>
+            <p> Natural resources include:</P>
                 <ul>
                   <li>Diamonds</li>
                   <li>Copper</li>
