--- a/botswana.html
+++ b/botswana.html
@@ -17,7 +17,7 @@
         <h2>Geography</h2>
 
         <ul>
-          <li><a href="https://www.cia.gov/the-world-factbook/countries/botswana/#geography">Geography of Botswana</a></li>
+          <li><a href="https://www.cia.gov/the-world-factbook/countries/botswana/#geography.html">Geography of Botswana</a></li>
         </ul>
 
           <h3> Location</h3>
