--- a/botswana.html
+++ b/botswana.html
@@ -12,13 +12,28 @@
       <h1>Botswana</h1>
     </header>
 
+    <nav>
+      <ul>
+        <li><a href="#loc">Location</a><li>
+      </ul>
+
+
+
+
+
+
+
+
+
+
+
     <main>
       <section>
         <h2>Geography</h2>
-
-
+        <article id="loc">
           <h3> Location</h3>
             <p>Southern Africa, north of South Africa</p>
+        </article>
 
           <h3> Terrain</h3>
             <p> The terrain is predominantly flat to general rolling tableland. </P>
