--- a/botswana.html
+++ b/botswana.html
@@ -14,7 +14,7 @@
 
     <nav>
       <ul>
-        <li><a href="#loc">Location</a><li>
+        <li><a href="#geo">Geography</a><li>
       </ul>
     </nav>
 
@@ -28,8 +28,9 @@
 
     <main>
       <section>
+            <article id="geo">
         <h2>Geography</h2>
-        <article id="loc">
+
           <h3> Location</h3>
             <p>Southern Africa, north of South Africa</p>
         </article>
