--- a/botswana.html
+++ b/botswana.html
@@ -15,6 +15,7 @@
     <nav>
       <ul>
         <li><a href="#geo">Geography</a><li>
+        <li><a href="#env">Environment</a><li>
       </ul>
     </nav>
 
@@ -27,7 +28,7 @@
 
 
     <main>
-            <article id="geo">
+      <article id="geo">
         <h2>Geography</h2>
 
           <h3> Location</h3>
@@ -52,12 +53,12 @@
                   <li>Silver</li>
                 </ul>
 
+      <article id="env">
+        <h2> Environment</h2>
 
-    <h2> Environment</h2>
-
-      <h3> Climate</h3>
-      <h3> Current Issues</h3>
-      <h3> Land Usage</h3>
+          <h3> Climate</h3>
+          <h3> Current Issues</h3>
+          <h3> Land Usage</h3>
 
     <h2> People and Society</h2>
 
