--- a/botswana.html
+++ b/botswana.html
@@ -16,6 +16,7 @@
       <ul>
         <li><a href="#geo">Geography</a><li>
         <li><a href="#env">Environment</a><li>
+        <li><a href="#geo">Geography</a><li>
       </ul>
     </nav>
 
@@ -30,10 +31,10 @@
     <main>
       <article id="geo">
         <h2>Geography</h2>
+      </article>
 
           <h3> Location</h3>
             <p>Southern Africa, north of South Africa</p>
-        </article>
 
           <h3> Terrain</h3>
             <p> The terrain is predominantly flat to general rolling tableland. </P>
@@ -55,6 +56,7 @@
 
       <article id="env">
         <h2> Environment</h2>
+      </article>
 
           <h3> Climate</h3>
           <h3> Current Issues</h3>
