--- a/botswana.html
+++ b/botswana.html
@@ -16,15 +16,9 @@
       <ul>
         <li><a href="#geo">Geography</a><li>
         <li><a href="#env">Environment</a><li>
-        <li><a href="#geo">Geography</a><li>
+        <li><a href="#pas">People and Society</a><li>
       </ul>
     </nav>
-
-
-
-
-
-
 
 
 
@@ -61,12 +55,12 @@
           <h3> Climate</h3>
           <h3> Current Issues</h3>
           <h3> Land Usage</h3>
+      <article id="pas">
+          <h2> People and Society</h2>
 
-    <h2> People and Society</h2>
-
-      <h3> Population</h3>
-      <h3> Ethnic Groups</h3>
-      <h3> Demographic Profile</h3>
+            <h3> Population</h3>
+            <h3> Ethnic Groups</h3>
+            <h3> Demographic Profile</h3>
     </main>
   </body>
 </html>
