--- a/botswana.html
+++ b/botswana.html
@@ -57,6 +57,7 @@
           <h3> Land Usage</h3>
       <article id="pas">
           <h2> People and Society</h2>
+      </article>
 
             <h3> Population</h3>
             <h3> Ethnic Groups</h3>
