--- a/botswana.html
+++ b/botswana.html
@@ -14,20 +14,20 @@
 
     <nav>
       <ul>
-        <li><a href="#geo">Geography</a><li>
+        <li><a href="#loc">Location</a><li>
         <li><a href="#env">Environment</a><li>
         <li><a href="#pas">People and Society</a><li>
       </ul>
     </nav>
 
 
-
     <main>
-      <article id="geo">
         <h2>Geography</h2>
 
+        <article id="loc">
           <h3> Location</h3>
             <p>Southern Africa, north of South Africa</p>
+        </article>
 
           <h3> Terrain</h3>
             <p> The terrain is predominantly flat to general rolling tableland. </P>
@@ -46,7 +46,6 @@
                   <li>Iron ore</li>
                   <li>Silver</li>
                 </ul>
-      </article>
 
       <article id="env">
         <h2> Environment</h2>
