--- a/botswana.html
+++ b/botswana.html
@@ -15,7 +15,7 @@
     <nav>
       <ul>
         <li><a href="#loc">Location</a><li>
-        <li><a href="#env">Environment</a><li>
+        <li><a href="#ter">Terrain</a><li>
         <li><a href="#pas">People and Society</a><li>
       </ul>
     </nav>
@@ -29,9 +29,11 @@
             <p>Southern Africa, north of South Africa</p>
         </article>
 
+        <article id="ter">
           <h3> Terrain</h3>
             <p> The terrain is predominantly flat to general rolling tableland. </P>
             <p> The Kalahari Desert is in the southwest. </p>
+        </article>
 
           <h3>Natural Resources</h3>
             <p> Natural resources include:</P>
