--- a/botswana.html
+++ b/botswana.html
@@ -16,7 +16,7 @@
       <ul>
         <li><a href="#loc">Location</a><li>
         <li><a href="#ter">Terrain</a><li>
-        <li><a href="#pas">People and Society</a><li>
+        <li><a href="#nat">Natural Resources</a><li>
       </ul>
     </nav>
 
@@ -35,6 +35,7 @@
             <p> The Kalahari Desert is in the southwest. </p>
         </article>
 
+          <article id="loc">
           <h3>Natural Resources</h3>
             <p> Natural resources include:</P>
                 <ul>
@@ -48,24 +49,25 @@
                   <li>Iron ore</li>
                   <li>Silver</li>
                 </ul>
+          </article>
 
-      <article id="env">
+
         <h2> Environment</h2>
 
           <h3> Climate</h3>
           <h3> Current Issues</h3>
           <h3> Land Usage</h3>
-      </article>
 
 
-      <article id="pas">
+
+
           <h2> People and Society</h2>
 
 
             <h3> Population</h3>
             <h3> Ethnic Groups</h3>
             <h3> Demographic Profile</h3>
-      </article>
+  
     </main>
   </body>
 </html>
