--- a/botswana.html
+++ b/botswana.html
@@ -35,7 +35,7 @@
             <p> The Kalahari Desert is in the southwest. </p>
         </article>
 
-          <article id="loc">
+          <article id="nat">
           <h3>Natural Resources</h3>
             <p> Natural resources include:</P>
                 <ul>
@@ -67,7 +67,7 @@
             <h3> Population</h3>
             <h3> Ethnic Groups</h3>
             <h3> Demographic Profile</h3>
-  
+
     </main>
   </body>
 </html>
