--- a/botswana.html
+++ b/botswana.html
@@ -14,9 +14,9 @@
 
     <nav>
       <ul>
-        <li><a href="#loc">Location</a><li>
-        <li><a href="#ter">Terrain</a><li>
-        <li><a href="#nat">Natural Resources</a><li>
+        <li><a href="#loc">Location</a></li>
+        <li><a href="#ter">Terrain</a></li>
+        <li><a href="#nat">Natural Resources</a></li>
       </ul>
     </nav>
 
