--- a/botswana.html
+++ b/botswana.html
@@ -55,7 +55,16 @@
         <h2> Environment</h2>
 
           <h3> Climate</h3>
+            <p> The climate in Botswana is semiarid, with warm winters and hot summers.</p>
+
           <h3> Current Issues</h3>
+            <ul>
+              <li>Overgrazing</li>
+              <li>Desertification</lio>
+              <li>Limited freshwater resources</li>
+              <li>Air pollution</li>
+            </ul>
+
           <h3> Land Usage</h3>
 
 
