--- a/botswana.html
+++ b/botswana.html
@@ -60,7 +60,7 @@
           <h3> Current Issues</h3>
             <ul>
               <li>Overgrazing</li>
-              <li>Desertification</lio>
+              <li>Desertification</li>
               <li>Limited freshwater resources</li>
               <li>Air pollution</li>
             </ul>
