--- a/botswana.html
+++ b/botswana.html
@@ -58,7 +58,12 @@
             <p> The climate in Botswana is semiarid, with warm winters and hot summers.</p>
 
           <h3> Current Issues</h3>
-            
+          <ul>
+            <li>Overgrazing</li>
+            <li>Desertification</li>
+            <li>Limited freshwater resources</li>
+            <li>Air pollution</li>
+          </ul>
 
           <h3> Land Usage</h3>
 
