--- a/botswana.html
+++ b/botswana.html
@@ -66,7 +66,9 @@
           </ul>
 
           <h3> Land Usage</h3>
-
+          <table>
+            <caption>Land Usage in Botswana</caption>
+          </table>
 
           <h2> People and Society</h2>
 
