--- a/botswana.html
+++ b/botswana.html
@@ -68,6 +68,11 @@
           <h3> Land Usage</h3>
           <table>
             <caption>Land Usage in Botswana</caption>
+            <tr>
+              <th>Use</th>
+              <th>Percent</th>
+
+     </tr>
           </table>
 
           <h2> People and Society</h2>
