--- a/botswana.html
+++ b/botswana.html
@@ -72,7 +72,14 @@
               <th>Use</th>
               <th>Percent</th>
 
-     </tr>
+            </tr>
+
+            <tr>
+              <td>Agriculture</td>
+              <td>45.8%</td>
+
+
+            </tr>
           </table>
 
           <h2> People and Society</h2>
