--- a/botswana.html
+++ b/botswana.html
@@ -71,15 +71,33 @@
             <tr>
               <th>Use</th>
               <th>Percent</th>
-
             </tr>
 
             <tr>
               <td>Agriculture</td>
               <td>45.8%</td>
-
-
             </tr>
+
+            <tr>
+              <td>Arable Land</td>
+              <td>.06%</td>
+            </tr>
+
+            <tr>
+              <td>Permanent Pasture</td>
+              <td>45.2%</td>
+            </tr>
+
+            <tr>
+              <td>Forest</td>
+              <td>19.8%</td>
+            </tr>
+
+            <tr>
+              <td>Other</td>
+              <td>34.4%</td>
+            </tr>
+
           </table>
 
           <h2> People and Society</h2>
