--- a/botswana.html
+++ b/botswana.html
@@ -97,13 +97,12 @@
               <td>Other</td>
               <td>34.4%</td>
             </tr>
-
           </table>
 
           <h2> People and Society</h2>
 
-
             <h3> Population</h3>
+              <p> The Population of Botswana is estimated to be 2,384,246.</p>
             <h3> Ethnic Groups</h3>
             <h3> Demographic Profile</h3>
 
