--- a/botswana.html
+++ b/botswana.html
@@ -104,6 +104,34 @@
             <h3> Population</h3>
               <p> The Population of Botswana is estimated to be 2,384,246.</p>
             <h3> Ethnic Groups</h3>
+              <table>
+                <caption>Ethnic Groups in Botswana</caption>
+                <tr>
+                  <th>Group</th>
+                  <th>Percent of Popoulation</th>
+                </tr>
+
+                <tr>
+                  <td>Tswana/Setswana</td>
+                  <td>79%%</td>
+                </tr>
+
+                <tr>
+                  <td>Kalanga</td>
+                  <td>11%</td>
+                </tr>
+
+                <tr>
+                  <td>Basarwa</td>
+                  <td>3%</td>
+                </tr>
+
+                <tr>
+                  <td>Other</td>
+                  <td>7%</td>
+                </tr>
+              </table>
+
             <h3> Demographic Profile</h3>
 
     </main>
