--- a/botswana.html
+++ b/botswana.html
@@ -17,6 +17,7 @@
         <li><a href="#loc">Location</a></li>
         <li><a href="#ter">Terrain</a></li>
         <li><a href="#nat">Natural Resources</a></li>
+        <li><a href="#cli">Climate</a></li>
       </ul>
     </nav>
 
@@ -54,8 +55,10 @@
 
         <h2> Environment</h2>
 
+          <article id="cli">
           <h3> Climate</h3>
             <p> The climate in Botswana is semiarid, with warm winters and hot summers.</p>
+          </article>
 
           <h3> Current Issues</h3>
           <ul>
