--- a/botswana.html
+++ b/botswana.html
@@ -18,6 +18,7 @@
         <li><a href="#ter">Terrain</a></li>
         <li><a href="#nat">Natural Resources</a></li>
         <li><a href="#cli">Climate</a></li>
+        <li><a href="#cui">Current Issues</a></li>
       </ul>
     </nav>
 
@@ -60,6 +61,7 @@
             <p> The climate in Botswana is semiarid, with warm winters and hot summers.</p>
           </article>
 
+          <article id="cui">
           <h3> Current Issues</h3>
           <ul>
             <li>Overgrazing</li>
@@ -67,6 +69,7 @@
             <li>Limited freshwater resources</li>
             <li>Air pollution</li>
           </ul>
+          </article>
 
           <h3> Land Usage</h3>
           <table>
