--- a/botswana.html
+++ b/botswana.html
@@ -19,6 +19,10 @@
         <li><a href="#nat">Natural Resources</a></li>
         <li><a href="#cli">Climate</a></li>
         <li><a href="#cui">Current Issues</a></li>
+        <li><a href="#lan">Land Usage</a></li>
+        <li><a href="#pop">Population</a></li>
+        <li><a href="#eth">Ethnic Groups</a></li>
+        <li><a href="#dem">Demographics</a></li>
       </ul>
     </nav>
 
@@ -71,6 +75,7 @@
           </ul>
           </article>
 
+          <article id="lan">
           <h3> Land Usage</h3>
           <table>
             <caption>Land Usage in Botswana</caption>
@@ -104,11 +109,16 @@
               <td>34.4%</td>
             </tr>
           </table>
+        </article>
 
           <h2> People and Society</h2>
 
+            <article id="pop">
             <h3> Population</h3>
               <p> The Population of Botswana is estimated to be 2,384,246.</p>
+            </article>
+
+            <article id="eth">
             <h3> Ethnic Groups</h3>
               <table>
                 <caption>Ethnic Groups in Botswana</caption>
@@ -137,8 +147,11 @@
                   <td>7%</td>
                 </tr>
               </table>
+            </article>
 
+            <article id="dem">
             <h3> Demographic Profile</h3>
+          </article>
 
     </main>
   </body>
