--- a/botswana.html
+++ b/botswana.html
@@ -154,5 +154,8 @@
           </article>
 
     </main>
+
+    <footer>
+      <p>Source: a< href="https://www.cia.gov/the-world-factbook/countries/botswana/">CIA World Factbook"</a></p>
   </body>
 </html>
