--- a/botswana.html
+++ b/botswana.html
@@ -156,6 +156,7 @@
     </main>
 
     <footer>
-      <p>Source: a< href="https://www.cia.gov/the-world-factbook/countries/botswana/">CIA World Factbook"</a></p>
+      <p> Source: <a href="https://www.cia.gov/the-world-factbook/countries/botswana/">CIA World Factbook</a></p>
+    </footer>
   </body>
 </html>
