--- a/botswana.html
+++ b/botswana.html
@@ -151,6 +151,7 @@
 
             <article id="dem">
             <h3> Demographic Profile</h3>
+              <p> Botswana has experienced an extremely quick decline in fertilty in comparison to the rest of Sub-Sarahan Africa.</p>
           </article>
 
     </main>
