--- a/botswana.html
+++ b/botswana.html
@@ -28,6 +28,20 @@
 
 
     <main>
+      <section>
+        <h2>Picture</h2>
+        <figure>
+
+        </figure>
+      </section>
+
+
+
+
+
+
+
+
         <h2>Geography</h2>
 
         <article id="loc">
