--- a/botswana.html
+++ b/botswana.html
@@ -30,9 +30,10 @@
     <main>
       <section>
         <h2>Picture</h2>
-        <figure>
 
-        </figure>
+          <img> <source src="BC_008_large.png" alt="Botswana Okavango Delta Picture" />
+
+
       </section>
 
 
