--- a/botswana.html
+++ b/botswana.html
@@ -31,7 +31,10 @@
       <section>
         <h2>Picture</h2>
 
-          <img> <source src="BC_008_large.png" alt="Botswana Okavango Delta Picture" />
+        <figure>
+          <img <src="BC_008_large.png" alt="Picture"/>
+          <figcaption> Botswana's Okavango Delta</figcaption>
+        </figure>
 
 
       </section>
