--- a/botswana.html
+++ b/botswana.html
@@ -32,8 +32,9 @@
         <h2>Picture</h2>
 
         <figure>
-          <img src="BC_008_large.png" alt="Botswana's Okavango Delta." />
-          <figcaption> Botswana's Okavango Delta. Photo by <a href="https://www.cia.gov/the-world-factbook/countries/botswana/images">CIA World Factbook</a></figcaption>
+          <img src="BC_008_large.png" alt="Botswana's Okavango Delta."  />
+          <figcaption> Botswana's Okavango Delta. Photo by
+            <a href="https://www.cia.gov/the-world-factbook/countries/botswana/images">CIA World Factbook</a></figcaption>
         </figure>
 
 
