--- a/botswana.html
+++ b/botswana.html
@@ -29,22 +29,14 @@
 
     <main>
       <section>
-        <h2>Picture</h2>
+        <h2>Map</h2>
 
         <figure>
-          <img src="BC_008_large.png" alt="Botswana's Okavango Delta."  >
+          <img src="images/botswana-map.png" alt="Botswana's Okavango Delta."  >
           <figcaption> Botswana's Okavango Delta. Photo by
             <a href="https://www.cia.gov/the-world-factbook/countries/botswana/images">CIA World Factbook</a></figcaption>
         </figure>
-
-
       </section>
-
-
-
-
-
-
 
 
         <h2>Geography</h2>
