--- a/botswana.html
+++ b/botswana.html
@@ -162,8 +162,7 @@
 
             <article id="dem">
             <h3> Demographic Profile</h3>
-              <p> Botswana has experienced an extremely quick decline in fertilty in comparison to the rest of Sub-Sarahan Africa. The fertilty rate has fallen from 5 children per woman, to around 2.4 children.</p>
-              <h4> Reasons</h4>
+              <p> Botswana has experienced an extremely quick decline in fertilty in comparison to the rest of Sub-Sarahan Africa. The fertilty rate has fallen from 5 children per woman, to around 2.4 children. Reasons include...</p>
               <ul>
                 <li>Higer educatoin among women</li>
                 <li>More women are participating in the work force</li>
