--- a/botswana.html
+++ b/botswana.html
@@ -170,6 +170,8 @@
                 <li>Later births</li>
                 <li> Family planning programs </li>
               </ul>
+
+              <p>The prevalance rate of HIV/AIDS in Botswana is 22%, the third highest in the world.</p>
           </article>
 
     </main>
