--- a/botswana.html
+++ b/botswana.html
@@ -172,6 +172,7 @@
               </ul>
 
               <p>The prevalance rate of HIV/AIDS in Botswana is 22%, the third highest in the world.</p>
+              <p> Citizens of Botswana are called Batswana.</p>
           </article>
 
     </main>
