--- a/botswana.html
+++ b/botswana.html
@@ -172,8 +172,10 @@
               </ul>
 
               <p>The prevalance rate of HIV/AIDS in Botswana is 22%, the third highest in the world.</p>
-              <p> Citizens of Botswana are called Batswana.</p>
+              <p> Citizens of Botswana are called Batswana. Many Batswana prefer to live in their home country and will only cross borders for work on a temporary basis.</p>
+              <p>
           </article>
+
 
     </main>
 
