--- a/botswana.html
+++ b/botswana.html
@@ -11,7 +11,7 @@
     <header>
       <h1>Botswana</h1>
     </header>
-
+      <p> ahahahhaha</P>
     <nav>
       <ul>
         <li><a href="#loc">Location</a></li>
