--- a/botswana.html
+++ b/botswana.html
@@ -11,7 +11,9 @@
     <header>
       <h1>Botswana</h1>
     </header>
-      <p> ahahahhaha</P>
+      <p> In 1885, three tribal cheifs traveled to Great Britain in order to prevent Rhosesia (Zimbabwe) and the Union of South Africa from incorporating their land.</p>
+      <p> Great Britain put "Bechuanaland" under its protection, and then changed its name to Botswana.</p>
+
     <nav>
       <ul>
         <li><a href="#loc">Location</a></li>
