--- a/botswana.html
+++ b/botswana.html
@@ -13,6 +13,7 @@
     </header>
       <p> In 1885, three tribal cheifs traveled to Great Britain in order to prevent Rhosesia (Zimbabwe) and the Union of South Africa from incorporating their land.</p>
       <p> Great Britain put "Bechuanaland" under its protection, and then changed its name to Botswana.</p>
+      <p> Botswana has one of the most stable economies in Africa due to uninterrupted civilian leadership, the progression of social policies, and large capital investment. </p>
 
     <nav>
       <ul>
