--- a/botswana.html
+++ b/botswana.html
@@ -74,6 +74,12 @@
 
         <h2> Environment</h2>
 
+        <figure>
+          <img src="images/botswana-sunset.png" alt="Sunset in Botswana." >
+          <figcaption> Sunset in Botswana. Photo by
+            <a href="https://www.cia.gov/the-world-factbook/countries/botswana/images">CIA World Factbook</a></figcaption>
+        </figure>
+
           <article id="cli">
           <h3> Climate</h3>
             <p> The climate in Botswana is semiarid, with warm winters and hot summers.</p>
