--- a/botswana.html
+++ b/botswana.html
@@ -14,6 +14,10 @@
       <p> In 1885, three tribal cheifs traveled to Great Britain in order to prevent Rhosesia (Zimbabwe) and the Union of South Africa from incorporating their land.</p>
       <p> Great Britain put "Bechuanaland" under its protection, and then changed its name to Botswana.</p>
       <p> Botswana has one of the most stable economies in Africa due to uninterrupted civilian leadership, the progression of social policies, and large capital investment. </p>
+      <p> Since the country gained independence, the Botswana Democtatic Party has won every national election. The party continues to rule today. </p>
+      <p>President Mokgweesi Eric MASISI has been in power since 2018. He is the nation's fifth president. </p>
+      <p> Mineral extraction, espeically diamonds, are Botswana's main eceonomic activities. However, tourism is beginning to become more popular due to conservation practices. </p>
+
 
     <nav>
       <ul>
@@ -46,13 +50,13 @@
 
         <article id="loc">
           <h3> Location</h3>
-            <p>Southern Africa, north of South Africa</p>
+            <p>Botswana is located in Southern Africa, north of South Africa.</p>
         </article>
 
         <article id="ter">
           <h3> Terrain</h3>
             <p> The terrain is predominantly flat to general rolling tableland. </P>
-            <p> The Kalahari Desert is in the southwest. </p>
+            <p> The Kalahari Desert is located in the southwest. </p>
         </article>
 
           <article id="nat">
