--- a/botswana.html
+++ b/botswana.html
@@ -13,11 +13,11 @@
     </header>
       <p> In 1885, three tribal cheifs traveled to Great Britain in order to prevent Rhosesia (Zimbabwe) and the Union of South Africa from incorporating their land.</p>
       <p> Great Britain put "Bechuanaland" under its protection, and then changed its name to Botswana.</p>
-      <p> Botswana has one of the most stable economies in Africa due to uninterrupted civilian leadership, the progression of social policies, and large capital investment. </p>
-      <p> Since the country gained independence, the Botswana Democtatic Party has won every national election. The party continues to rule today. </p>
+      <p> Botswana has one of the most stable economies in Africa due to uninterrupted civilian leadership, the progression of social policies, and large capital investment.</p>
+      <p> Since the country gained independence, the Botswana Democtatic Party has won every national election. The party continues to rule today.</p>
       <p>President Mokgweesi Eric MASISI has been in power since 2018. He is the nation's fifth president. </p>
-      <p> Mineral extraction, espeically diamonds, are Botswana's main eceonomic activities. However, tourism is beginning to become more popular due to conservation practices. </p>
-
+      <p> Mineral extraction, espeically diamonds, are Botswana's main eceonomic activities. However, tourism is beginning to become more popular due to conservation practices.</p>
+      <p> Botswana has one of the world's highest HIV/AIDS infection rates. The country has developed one of Africa's most progressive programs for dealing with the disease.</p>
 
     <nav>
       <ul>
