--- a/botswana.html
+++ b/botswana.html
@@ -19,6 +19,8 @@
       <p> Mineral extraction, espeically diamonds, are Botswana's main eceonomic activities. However, tourism is beginning to become more popular due to conservation practices.</p>
       <p> Botswana has one of the world's highest HIV/AIDS infection rates. The country has developed one of Africa's most progressive programs for dealing with the disease.</p>
 
+
+      <h2>Table of Contents</h2>
     <nav>
       <ul>
         <li><a href="#loc">Location</a></li>
