--- a/botswana.html
+++ b/botswana.html
@@ -20,7 +20,7 @@
       <p> Botswana has one of the world's highest HIV/AIDS infection rates. The country has developed one of Africa's most progressive programs for dealing with the disease.</p>
 
 
-      <h2>Table of Contents</h2>
+      <h2>List of Subsections</h2>
     <nav>
       <ul>
         <li><a href="#loc">Location</a></li>
