--- a/botswana.html
+++ b/botswana.html
@@ -22,15 +22,15 @@
 
     <nav>
       <ul>
-        <li><a href="#loc">Location</a></li>
-        <li><a href="#ter">Terrain</a></li>
-        <li><a href="#nat">Natural Resources</a></li>
-        <li><a href="#cli">Climate</a></li>
-        <li><a href="#cui">Current Issues</a></li>
-        <li><a href="#lan">Land Usage</a></li>
-        <li><a href="#pop">Population</a></li>
-        <li><a href="#eth">Ethnic Groups</a></li>
-        <li><a href="#dem">Demographics</a></li>
+        <li><a href="#location">Location</a></li>
+        <li><a href="#terrain">Terrain</a></li>
+        <li><a href="#natural">Natural Resources</a></li>
+        <li><a href="#climate">Climate</a></li>
+        <li><a href="#current">Current Issues</a></li>
+        <li><a href="#land">Land Usage</a></li>
+        <li><a href="#population">Population</a></li>
+        <li><a href="#ethnic">Ethnic Groups</a></li>
+        <li><a href="#demmographics">Demographics</a></li>
       </ul>
     </nav>
 
@@ -49,18 +49,18 @@
 
         <h2>Geography</h2>
 
-        <article id="loc">
+        <article id="location">
           <h3>Location</h3>
             <p>Botswana is located in Southern Africa, north of South Africa.</p>
         </article>
 
-        <article id="ter">
+        <article id="terrain">
           <h3>Terrain</h3>
             <p> The terrain is predominantly flat to general rolling tableland. </P>
             <p> The Kalahari Desert is located in the southwest. </p>
         </article>
 
-          <article id="nat">
+          <article id="natural">
           <h3>Natural Resources</h3>
             <p>Natural resources include:</P>
                 <ul>
@@ -85,12 +85,12 @@
             <a href="https://www.cia.gov/the-world-factbook/countries/botswana/images">CIA World Factbook</a></figcaption>
         </figure>
 
-          <article id="cli">
+          <article id="climate">
           <h3>Climate</h3>
             <p>The climate in Botswana is semiarid, with warm winters and hot summers.</p>
           </article>
 
-          <article id="cui">
+          <article id="current">
           <h3>Current Issues</h3>
           <ul>
             <li>Overgrazing</li>
@@ -100,7 +100,7 @@
           </ul>
           </article>
 
-          <article id="lan">
+          <article id="land">
           <h3>Land Usage</h3>
           <table>
             <caption>Land Usage in Botswana</caption>
@@ -138,12 +138,12 @@
 
           <h2>People and Society</h2>
 
-            <article id="pop">
+            <article id="populatin">
             <h3>Population</h3>
               <p>The Population of Botswana is estimated to be 2,384,246.</p>
             </article>
 
-            <article id="eth">
+            <article id="ethnic">
             <h3>Ethnic Groups</h3>
               <table>
                 <caption>Ethnic Groups in Botswana</caption>
@@ -174,7 +174,7 @@
               </table>
             </article>
 
-            <article id="dem">
+            <article id="demmographics">
             <h3>Demographic Profile</h3>
               <p>Botswana has experienced an extremely quick decline in fertilty in comparison to the rest of Sub-Sarahan Africa. The fertilty rate has fallen from 5 children per woman, to around 2.4 children. Reasons include...</p>
               <ul>
