--- a/botswana.html
+++ b/botswana.html
@@ -80,7 +80,7 @@
         <h2>Environment</h2>
 
         <figure>
-          <img src="images/botswana-sunset.png" alt="Sunset in Botswana." >
+          <img src="images/botswana-sunset.jpg" alt="Sunset in Botswana." >
           <figcaption>Sunset in Botswana. Photo by
             <a href="https://www.cia.gov/the-world-factbook/countries/botswana/images">CIA World Factbook</a></figcaption>
         </figure>
