--- a/botswana.html
+++ b/botswana.html
@@ -40,7 +40,7 @@
         <h2>Map</h2>
 
         <figure>
-          <img src="images/botswana-map.png" alt="Botswana's Okavango Delta." >
+          <img src="images/botswana-map.jpg" alt="Botswana's Okavango Delta." >
           <figcaption> Botswana's Okavango Delta. Photo by
             <a href="https://www.cia.gov/the-world-factbook/countries/botswana/images">CIA World Factbook</a></figcaption>
         </figure>
