--- a/botswana.html
+++ b/botswana.html
@@ -11,6 +11,11 @@
     <header>
       <h1>Botswana</h1>
     </header>
+
+    <main>
+      <section id="introduction"
+        <h2>Introduction</h2>
+
       <p>In 1885, three tribal cheifs traveled to Great Britain in order to prevent Rhosesia (Zimbabwe) and the Union of South Africa from incorporating their land.</p>
       <p>Great Britain put "Bechuanaland" under its protection, and then changed its name to Botswana.</p>
       <p>Botswana has one of the most stable economies in Africa due to uninterrupted civilian leadership, the progression of social policies, and large capital investment.</p>
@@ -18,7 +23,7 @@
       <p>President Mokgweesi Eric MASISI has been in power since 2018. He is the nation's fifth president. </p>
       <p>Mineral extraction, espeically diamonds, are Botswana's main eceonomic activities. However, tourism is beginning to become more popular due to conservation practices.</p>
       <p>Botswana has one of the world's highest HIV/AIDS infection rates. The country has developed one of Africa's most progressive programs for dealing with the disease.</p>
-
+    </section>
 
     <nav>
       <ul>
@@ -35,7 +40,6 @@
     </nav>
 
 
-    <main>
       <section>
         <h2>Map</h2>
 
