--- a/botswana.html
+++ b/botswana.html
@@ -13,7 +13,7 @@
     </header>
 
     <main>
-      <section id="introduction"
+      <section id="introduction">
         <h2>Introduction</h2>
 
       <p>In 1885, three tribal cheifs traveled to Great Britain in order to prevent Rhosesia (Zimbabwe) and the Union of South Africa from incorporating their land.</p>
@@ -23,7 +23,8 @@
       <p>President Mokgweesi Eric MASISI has been in power since 2018. He is the nation's fifth president. </p>
       <p>Mineral extraction, espeically diamonds, are Botswana's main eceonomic activities. However, tourism is beginning to become more popular due to conservation practices.</p>
       <p>Botswana has one of the world's highest HIV/AIDS infection rates. The country has developed one of Africa's most progressive programs for dealing with the disease.</p>
-    </section>
+
+      </section>
 
     <nav>
       <ul>
