--- a/botswana.html
+++ b/botswana.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" >
     <title>Botswana</title>
+    <link href="css/syle.css" rel="stylesheet" />
   </head>
 
   <body>
