--- a/botswana.html
+++ b/botswana.html
@@ -144,7 +144,7 @@
 
           <h2>People and Society</h2>
 
-            <article id="populatin">
+            <article id="population">
             <h3>Population</h3>
               <p>The Population of Botswana is estimated to be 2,384,246.</p>
             </article>
@@ -155,7 +155,7 @@
                 <caption>Ethnic Groups in Botswana</caption>
                 <tr>
                   <th>Group</th>
-                  <th>Percent of Popoulation</th>
+                  <th>Percent of Population</th>
                 </tr>
 
                 <tr>
